<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeleteNoteActivity">

    <TextView
        android:id="@+id/tvView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete Note"
        android:textSize="60sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="50dp"/>

    <LinearLayout
    android:id="@+id/bottomLineLayout"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textSize="30sp"
        android:layout_weight="1"
        android:onClick="deleteNote"/>

    <Button
        android:id="@+id/cancel_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textSize="30sp"
        android:layout_weight="1"
        android:onClick="cancelNote"/>
    </LinearLayout>

</LinearLayout>