<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Note Name"
        android:layout_marginBottom="10dp"
        android:textSize="33sp"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_weight="1"
        android:hint="Write your text here"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/bottomLineLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save"
            android:textSize="30sp"
            android:layout_weight="1"
            android:onClick="saveNote"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Cancel"
            android:textSize="30sp"
            android:layout_weight="1"
            android:onClick="cancelNote"/>

    </LinearLayout>

</LinearLayout>